--- a/CSS/enemyStyles.css
+++ b/CSS/enemyStyles.css
@@ -73,15 +73,11 @@
 	width: 9px;
 	height: 16px;
 	right: 2px;
-	bottom: 2px;
+	bottom: 0px;
 	text-align: right;
 	font-weight: bold;
-	font-size: 12px;
-	text-shadow:
-   -1px -1px 0 #fff,  
-    1px -1px 0 #fff,
-    -1px 1px 0 #fff,
-     1px 1px 0 #fff;
+	font-size: 10px;
+	color: white;
 }
 
 .enemyTalkBalloon{
