--- a/CSS/loginStyles.css
+++ b/CSS/loginStyles.css
@@ -34,6 +34,17 @@
 	text-align: center;
 }
 
+.displayUnavailable{
+	font-family: "Verdana";
+	font-size:14px;
+	position:relative;
+	height:35px;
+	width:300px;
+	margin-left: 250px;
+	margin-top: 175px;
+	text-align:center;
+}
+
 .displayLoading{
 	font-family: "Verdana";
 	font-size:14px;
