Patched overflowing HP bars

--- a/CSS/generalStyles.css
+++ b/CSS/generalStyles.css
@@ -211,6 +211,7 @@ img{
 .lightGreen{ background-color: #39af2b; }
 .red{ background-color: red; }
 .skyBlue{ background-color: #00d8ff; }
+.purple{ background-color: #e15eff; }
 .green{ background-color: #216619; opacity: 0.95;}
 .blackBorder{ border: 1px solid black; }
 
