--- a/CSS/enemyStyles.css
+++ b/CSS/enemyStyles.css
@@ -85,11 +85,11 @@
 
 .enemyNamePos{
 	width:238px;
-	height:30px;
+	height:33px;
 	left:241px;
 	top:5px;
-	padding-top:3px;
-	font-size:22px;
+	text-align: center;
+	line-height: 33px;
 }
 
 .enemyClassPos{
